fix: overflow

--- a/packages/uhk-web/src/app/components/macro/item/macro-item.component.scss
+++ b/packages/uhk-web/src/app/components/macro/item/macro-item.component.scss
@@ -1,6 +1,7 @@
 @import '../../../../styles/variables';
 
 :host {
+    overflow: visible;
     display: block;
 
     &.macro-item:first-of-type {
